objects/LLC_BI__Product_Package__c.object
<CustomObject>
    <description>The Product Package Object allows the user to group relationships and loans in a singular view to work complex credit packages and exposure purposes</description>
    <fields>
        <fullName>CF_Approval_Path__c</fullName>
        <description>This field has used in PP Approval process.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Approval Path</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Approval_Process__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Approval Process</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used in flex approval process to reference the first approver. Added for Commercial Accelerate project.</description>
        <label>Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Commercial_Product_Package_1st_Approver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used in flex approval process to reference the second approver. Added for Commercial Accelerate project.</description>
        <label>Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Commercial_Product_Packages_2nd_Approver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Product_Packages6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Approver_Queue__c</fullName>
        <description>This field has been used in pp approval process during R2 build.</description>
        <label>Approver Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internal Loan Committee</fullName>
                </value>
                <value>
                    <fullName>Internal and Director Loan Committee</fullName>
                </value>
                <value>
                    <fullName>Board Of Directors</fullName>
                </value>
                <value>
                    <fullName>CBP RBP RCO Role Queue</fullName>
                </value>
                <value>
                    <fullName>RBP RCO Role Queue</fullName>
                </value>
                <value>
                    <fullName>RCO Executive Team Role Queue</fullName>
                </value>
                <value>
                    <fullName>CEO CCO CBO Role Queue</fullName>
                </value>
                <value>
                    <fullName>Director Loan Committee</fullName>
                    <isActive>false</isActive>
                    <label>Director Loan Committee</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Auto_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox has used in PP Approval process flow.</description>
        <label>Auto Approval?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It will be updated by a flow and saves the branch id from the RM branch number.</description>
        <label>Branch</label>
        <referenceTo>LLC_BI__Branch__c</referenceTo>
        <relationshipLabel>Product Packages (Branch)</relationshipLabel>
        <relationshipName>Product_Package</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Collateral_Narrative__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Collateral Narrative</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CF_Converted_Loan__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field has been used to check converted loan and it&apos;s been update from after loan flow.</description>
        <label>Converted Loan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Credit_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is being used on PP&gt;Deal team</description>
        <label>Credit Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Product_Packages2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Credit_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Product_Packages5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Current_User__c</fullName>
        <formula>IF( $User.Id =   CF_Loan_Assistant__c ,&apos;Loan Assistant&apos;,
IF( $User.Id  =  CF_Relationship_Manager__c ,&apos;Relationship Manager&apos;,
IF( $User.Id =  CF_Credit_Analyst__c ,&apos;Credit Analyst&apos;,
IF( $User.Id =  CF_Credit_Officer__c ,&apos;Credit Officer&apos;,
IF( $User.Id =  CF_Treasury__c ,&apos;Treasury&apos;,
IF( $User.Id  =  CF_Secondary_Relationship_Manager__c ,&apos;Secondary Relationship Manager&apos;,
&apos;NA&apos;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Fast_Track_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check this box if you wish to submit to Credit</inlineHelpText>
        <label>Fast-Track Approval?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Financial_Repayment_Analysis__c</fullName>
        <description>This field has been used on long form credit memo.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Financial Analysis</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CF_Financial_Summary_Narrative__c</fullName>
        <description>This field has been used in long and short form credit memo.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Financial Summary Narrative</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CF_Guarantor_Analysis__c</fullName>
        <description>This field has been used on long form credit memo</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Guarantor Analysis</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CF_Has_Employee_Loan__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag will be checked when any one of the loans associated to the product package has Employee Loan = True</description>
        <label>Has Employee Loan?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Has_New_Money_Loan__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is marked TRUE if there is a loan that has new money in the product package</description>
        <label>Has New Money Loan?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Has_Reg_O_Loan__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag will be checked when any one of the loans associated to the product package is Reg O enabled</description>
        <label>Has Reg O Loan?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Has_Structure_Loans__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used as an indicator if the product package includes a loan that has limits or sublimits.</description>
        <label>Has Structure Loans?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Highest_Policy_Exception__c</fullName>
        <defaultValue>&apos;none&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Highest Policy Exception</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Is_Approval_Ready__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be checked manually before submitting the PP for approval.</description>
        <label>Is Approval Ready?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Is_Fully_Cash_Secured__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is marked TRUE if ALL loans in product package are marked TRUE for Loan Fully Cash Secured field.</description>
        <label>Is Fully Cash Secured?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Line_Of_Business__c</fullName>
        <description>This field is being used on PP Details</description>
        <label>Line Of Business</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>SBA</fullName>
                </value>
                <value>
                    <fullName>Contract Services</fullName>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Treasury Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Loan_Assistant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is being used on PP&gt;Deal Team</description>
        <label>Loan Assistant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Product_Packages1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Loan_Purpose__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field has been used in PP Approval Process.</description>
        <label>Loan Purpose</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Memorandum__c</fullName>
        <description>This field is being used on narrative section of Memorandum in Long Form Credit Memo.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Deal Summary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CF_New_Policy_Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is Is marked true if there is a net new policy exception on any of the loans in the product package (e.g. if a pp has a loan that is renewed/modified and there is a new PE from when it was originally approved)</description>
        <label>New Policy Exception?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Now__c</fullName>
        <description>This field is used to populate current date</description>
        <formula>Now()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Now</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Pre_Screen_Comments__c</fullName>
        <description>This field is being used on PP Details</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CF_Processor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is being used on PP&gt;Deal Team</description>
        <label>Processor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Product_Packages3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Product_Package_Narrative__c</fullName>
        <description>This field is used for PP narrative section on PP</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Package Narrative</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CF_Recent_Risk_Grade_Downgrade__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to Indicates if the product package includes a loan that has a recent risk rating downgrade.</description>
        <label>Recent Risk Grade Downgrade?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Recommendation_Summary__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Recommendation Summary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CF_Region__c</fullName>
        <description>It will store the region value from the branch lookup fields.</description>
        <formula>TEXT(LLC_BI__Account__r.LLC_BI__Region__c)</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Relationship_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used on RM on Deal Team</description>
        <label>Relationship Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Product_Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Repayment_Analysis__c</fullName>
        <description>This field has been used on long form credit memo</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Repayment Analysis</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CF_Request_Description__c</fullName>
        <description>This field will be used to capture the Request description for TM request on PP</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Request Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CF_Risk_Rating_Narrative_PP__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Risk Rating Narrative</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CF_Secondary_Relationship_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Relationship Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Product_Packages7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Strengths__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Strengths</label>
        <length>285</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CF_Today_s_Date__c</fullName>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Today&apos;s Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Total_Aggregate_Exposure_Account__c</fullName>
        <description>This field has been used on PP compact layout.</description>
        <formula>LLC_BI__Account__r.CF_Total_Aggregate_Exposure__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Aggregate Account Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Total_Aggregate_Exposure__c</fullName>
        <description>This formula field is giving us summation of exposures.</description>
        <formula>LLC_BI__Total_Direct_Exposure__c  +  LLC_BI__Total_Indirect_Exposure__c  +  LLC_BI__Total_Affiliated_Exposure__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Product Package Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Total_Treasury_Exposure__c</fullName>
        <description>This field is used to store the Total Treasury Exposure value from Account record</description>
        <formula>LLC_BI__Account__r.CF_Total_Treasury_Exposure__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Treasury Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_Total_Treasury_Services__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field will store the count of Treasury Service records attached to the Product Package</description>
        <label>Total Treasury Services</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_Treasury__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is being used on Deal team on PP</description>
        <label>Treasury</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Product_Packages4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Weaknesses__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Weaknesses</label>
        <length>285</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Account field is a lookup to the Account/ Relationship object in nCino and used to specify the main account the product package is associated with. The relationship is required to create a new loan facility from the product package page.</description>
        <label>Relationship</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Packages</relationshipLabel>
        <relationshipName>Product_Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Additional_Income_Category__c</fullName>
        <description>Users populate this picklist field with any additional income in the deal an FI originates outside of nCino. By default, it is blank.</description>
        <inlineHelpText>Populate this field with any additional income.</inlineHelpText>
        <label>Additional Income Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Wealth</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Swap</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Additional_One_Time_Income__c</fullName>
        <description>Users populate this input with any additional one-time wealth, insurance, or other relevant income in the deal not captured in other loan, deposit, or treasury inputs. By default, it is blank.</description>
        <inlineHelpText>Use this field to capture any additional one-time wealth, insurance, or other relevant income in the deal an FI originates outside of nCino and not captured in existing loan, deposit, or treasury inputs.</inlineHelpText>
        <label>Additional One Time Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Ancillary_Product_Tax_Rate__c</fullName>
        <description>The approximate tax rate to apply to the revenue of new deposits in the deal an FI originates outside of nCino. By default, it is 21.</description>
        <inlineHelpText>The approximate tax rate to apply to the revenue of new deposits in the deal an FI originates outside of nCino.</inlineHelpText>
        <label>Deposit Tax Rate</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Ancillary_Revenue_Comments__c</fullName>
        <description>Users populate this text field with any details associated with ancillary revenue summarized in the deal. By default, it is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Use this field for any details associated with the ancillary revenue being summarized in the deal but originated outside of nCino.</inlineHelpText>
        <label>Ancillary Revenue Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Annual_Deposit_Operating_Cost__c</fullName>
        <defaultValue>200</defaultValue>
        <description>Use this field to determine the approximate Annual Operating Cost for new deposit products an FI originates in the deal outside of nCino. By default, it is 200.</description>
        <inlineHelpText>The approximate Annual Operating Cost for new deposit products an FI originates in the deal outside of nCino.</inlineHelpText>
        <label>Annual Deposit Operating Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Approval_Status__c</fullName>
        <description>The approval status field is used to specify where the Product Package is in an approval process. This field is used in conjunction with reverse propagation functionality to alert the user when all loans have met their approvals and the product package is ready to move forward in its approval path. This field should not be used when the propagate down approval process functionality is implemented.</description>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted</fullName>
                    <default>true</default>
                    <label>Not Submitted</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Ready</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Booked_Affiliated_Exposure__c</fullName>
        <description>This optional field automatically populates with a value based on the configuration of Relationship Statistics. This field is used to report Booked Affiliated Exposure to this Product Package.</description>
        <label>Booked Affiliated Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Booked_Direct_Exposure__c</fullName>
        <description>This field is optional and automatically populates with a value based on the configuration of Relationship Statistics. This field is used to report Booked Direct Exposure to the Product Package.</description>
        <inlineHelpText>This field is used to report Booked Direct Exposure to the Product Package.</inlineHelpText>
        <label>Booked Direct Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Booked_Indirect_Exposure__c</fullName>
        <description>This field is optional and automatically populates with a value based on the configuration of Relationship Statistics. This field is used to report Booked Indirect Exposure to the Product Package.</description>
        <inlineHelpText>This field is used to report Booked Indirect Exposure to the Product Package.</inlineHelpText>
        <label>Booked Indirect Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Capital_Allocation_Rate_of_New_Exposures__c</fullName>
        <defaultValue>0.05</defaultValue>
        <description>Users populate this field with the approximate capital allocation rate for all new treasury exposure an FI originates in the deal outside of nCino. nCino recommends using the same capital allocation rate used in loans. By default, it is 5%.</description>
        <inlineHelpText>The approximate capital allocation rate for all new treasury exposure an FI originates in the deal outside of nCino. nCino recommends using the same capital allocation rate used in loans.</inlineHelpText>
        <label>Capital Allocation Rate of New Exposures</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Committed_Affiliated_Exposure__c</fullName>
        <description>This optional field automatically populates via the system with a value based on the configuration of Relationship Statistics. This field is used to report Committed Affiliated Exposure to this Product Package.</description>
        <label>Committed Affiliated Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Committed_Direct_Exposure__c</fullName>
        <description>This field is optional and automatically populates with a value based on the configuration of Relationship Statistics. This field is used to report Committed Direct Exposure to the Product Package.</description>
        <inlineHelpText>This field is used to report Committed Direct Exposure to the Product Package.</inlineHelpText>
        <label>Committed Direct Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Committed_Indirect_Exposure__c</fullName>
        <description>This field is optional and automatically populates with a value based on the configuration of Relationship Statistics. This field is used to report Committed Indirect Exposure to the Product Package.</description>
        <inlineHelpText>This field is used to report Committed Indirect Exposure to the Product Package.</inlineHelpText>
        <label>Committed Indirect Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Cost_Of_New_Deposit_Capital_Percent__c</fullName>
        <defaultValue>0.1</defaultValue>
        <description>Use this field to represent the cost of deposit capital for new deposits in the deal an FI originates outside of nCino. By default, it is 10.</description>
        <inlineHelpText>The cost of deposit capital for new deposits in the deal an FI originates outside of nCino.</inlineHelpText>
        <label>Cost of New Deposit Capital</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Cost_of_Capital_of_New_Exposures__c</fullName>
        <defaultValue>0.10</defaultValue>
        <description>Users populate this field with the approximate cost of capital for all new treasury exposure an FI originates in the deal outside of nCino. nCino recommends using the same cost of capital rate used in for loans. By default, it is 10%.</description>
        <inlineHelpText>The approximate cost of capital percentage for all new treasury exposure being originated in the deal outside of nCino. nCino recommends using the same cost of capital rate used in for loans.</inlineHelpText>
        <label>Cost of Capital of New Exposures</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Credit_Memo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Credit Memo field is a look up to the credit memo record associated to the Product Package. This will automatically populate when a credit memo is generated for the Product Package. This will link the user from the Product Package directly to the credit memo associated with it.</description>
        <label>Credit Memo</label>
        <referenceTo>LLC_BI__Credit_Memo__c</referenceTo>
        <relationshipLabel>Product Packages</relationshipLabel>
        <relationshipName>Product_Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Deal_Type__c</fullName>
        <description>Users select a deal type from this optional picklist. This determines behaviours and layouts for the record. By default it is blank.</description>
        <label>Deal Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Loan Onboarding</fullName>
                </value>
                <value>
                    <fullName>Handover Loans</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Default_App__c</fullName>
        <defaultValue>&apos;pp-details.dashboard-pp-sn-details&apos;</defaultValue>
        <description>This field is used to determine the default landing page for this product package within the nCino User Interface.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field is used to determine the default landing page for this product package within the nCino User Interface.</inlineHelpText>
        <label>Default App</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Deposit_Reserve_Rate__c</fullName>
        <defaultValue>0.05</defaultValue>
        <description>Use this field to determine the approximate reserve rate for new deposit balances in the deal an FI holds on the balance sheet. By default, it is 5.</description>
        <inlineHelpText>The approximate reserve rate for deposit balances to be held on the balance sheet.</inlineHelpText>
        <label>Deposit Reserve Rate</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Description__c</fullName>
        <description>The Description field is an optional, free form, long text area that can be used to input details or additional information about the Product Package.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Expected_Loss_Rate_of_New_Exposures__c</fullName>
        <defaultValue>0.02</defaultValue>
        <description>Users populate this field with the approximate expected loss rate for any new treasury exposures an FI originates in the deal outside of nCino. Represents an average blended rate of PD &amp; LGD. By default, it is 2%.</description>
        <inlineHelpText>The approximate expected loss rate for any new treasury exposures an FI originates in the deal outside of nCino. This value should represent an average blended rate of PD &amp; LGD.</inlineHelpText>
        <label>Expected Loss Rate of New Exposures</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Expected_Term_of_New_Deposit_Products__c</fullName>
        <defaultValue>12</defaultValue>
        <description>Use this field for the expected term in months for new deposit products an FI originates in the deal outside of nCino. By default, it is 12.</description>
        <inlineHelpText>The expected term in months for new deposit products an FI originates in the deal outside of nCino.</inlineHelpText>
        <label>Expected Term of New Deposit Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Expected_Term_of_New_Treasury_Services__c</fullName>
        <defaultValue>60</defaultValue>
        <description>Users populate this field with the expected term in months for new treasury products an FI originates in the deal outside of nCino. By default, it is 60.</description>
        <inlineHelpText>The expected or average term in months for new treasury service products an FI originates in the deal outside of nCino.</inlineHelpText>
        <label>Expected Term of New Treasury Services</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Expected_Utilization_of_New_Exposure__c</fullName>
        <defaultValue>0.30</defaultValue>
        <description>Users populate this optional field with the expected utilization percentage of new credit exposure for applicable treasury service products an FI originates outside of nCino. By default, it is  30%.</description>
        <inlineHelpText>Users populate this field with the expected utilization % of new credit exposure for applicable treasury service products an FI originates outside of nCino.</inlineHelpText>
        <label>Expected Utilization of New Exposure</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Handover_Information__c</fullName>
        <description>Users populate this optional rich text field with context and other supporting information about the client and their financial situation. By default it is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Provide context and other supporting information about the client and their financial situation.</inlineHelpText>
        <label>Handover Information</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
</CustomObject>